# eih

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  PCLConfig.cmake
data/: pr2-test.env.xml
ext/: CMakeLists.txt
ext/distortion/: CMakeLists.txt  distortion_model.h  eigen_extensions.h  synthetic_sequence.cpp  synthetic_sequence.h
ext/pcl/: CMakeLists.txt
ext/pcl/simulation/: CMakeLists.txt
ext/pcl/simulation/include/pcl/simulation/: model.h
ext/pcl/simulation/src/: model.cpp
ext/pcl/simulation/test/: CMakeLists.txt  sim_terminal_demo.cpp  sim_test_simple.cpp
ext/trajopt/: CMakeLists.txt
ext/trajopt/osgviewer/: CMakeLists.txt  osgviewer.cpp  osgviewer.hpp  robot_ui.cpp  robot_ui.hpp
ext/trajopt/osgviewer/test/: osg_expt.cpp  robotui_expt.cpp  viewer_experiment.cpp
ext/trajopt/sensorsim/: CMakeLists.txt  sensorsimpy.cpp  sim_kinect.cpp  sim_kinect.hpp  sim_kinect_expt.cpp  test_sensorsim.py
ext/trajopt/utils/: basic_array.hpp  config.cpp  config.hpp  default_map.hpp  logging.cpp  macros.h
src/: CMakeLists.txt  main.cpp  sensorsimpy.cpp  sim_kinect.cpp  sim_kinect.hpp  sim_kinect_expt.cpp  sim_test_simple.cpp  synthetic_sequence.cpp
src/branch/: sim_kinect.cpp  sim_kinect_expt.cpp  sim_terminal_demo.cpp  sim_test_performance.cpp  sim_viewer.cpp  simulation_io.cpp  simulation_io.hpp
